<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <TextView
            android:id="@+id/ddp_tv_deleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:gravity="center"
            android:text="@string/deleted_your_account"
            android:textColor="@color/black_141414"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/gl_v1"
            app:layout_constraintRight_toRightOf="@id/gl_v2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ddp_tv_deleted_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/deleted_guide"
            android:textColor="@color/black_141414"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/ddp_tv_deleted"
            app:layout_constraintLeft_toLeftOf="@id/gl_v1"
            app:layout_constraintRight_toRightOf="@id/gl_v2" />

        <Button
            android:id="@+id/ddp_btn_close"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/close_eng"
            android:textColor="@color/white"
            android:background="@color/black_141414"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/gl_v1"
            app:layout_constraintRight_toRightOf="@id/gl_v2"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>