<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.lge.lgshoptimem.ui.more.EditZipCodeActivity" />

        <variable
            name="actionbar"
            type="com.lge.lgshoptimem.ui.common.ActionBar" />

        <variable
            name="buffer"
            type="androidx.databinding.ObservableField&lt;String>" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <include
            android:id="@+id/aez_inc_top"
            layout="@layout/view_action_bar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:actionbar="@{actionbar}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/aez_tv_zip_code"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/gray_505050"
            android:textSize="16sp"
            android:text="@string/zip_code"
            app:layout_constraintTop_toBottomOf="@id/aez_inc_top"
            app:layout_constraintLeft_toRightOf="@id/gl_v1"
            app:layout_constraintRight_toLeftOf="@id/gl_v2"
            />
        
        <EditText
            android:id="@+id/aez_et_input"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:textSize="16sp"
            android:inputType="number"
            android:background="@color/white"
            android:hint="@string/only_numbers"
            android:gravity="center_vertical"
            android:text="@={buffer}"
            android:autofillHints="@string/only_numbers"
            app:layout_constraintTop_toBottomOf="@id/aez_tv_zip_code"
            app:layout_constraintLeft_toRightOf="@id/gl_v1"
            app:layout_constraintRight_toLeftOf="@id/gl_v2"
            />

        <View
            android:id="@+id/aez_v_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/gray_e9e9e9"
            app:layout_constraintTop_toBottomOf="@id/aez_et_input"
            app:layout_constraintLeft_toRightOf="@id/gl_v1"
            app:layout_constraintRight_toLeftOf="@id/gl_v2"
            />

        <Button
            android:id="@+id/aez_btn_save"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/save_eng"
            android:onClick="@{activity::onBtnClick}"
            android:background="@drawable/sel_btn_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/aez_btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/aez_v_line_top"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/black_141414"
            app:layout_constraintBottom_toTopOf="@id/aez_v_line_mid"
            app:layout_constraintLeft_toRightOf="@id/aez_btn_save"
            app:layout_constraintRight_toLeftOf="@id/aez_btn_cancel"
            />

        <View
            android:id="@+id/aez_v_line_mid"
            android:layout_width="1dp"
            android:layout_height="26dp"
            android:background="@color/gray_989898"
            app:layout_constraintBottom_toTopOf="@id/aez_v_line_btm"
            app:layout_constraintLeft_toRightOf="@id/aez_btn_save"
            app:layout_constraintRight_toLeftOf="@id/aez_btn_cancel"
            />

        <View
            android:id="@+id/aez_v_line_btm"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/black_141414"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/aez_btn_save"
            app:layout_constraintRight_toLeftOf="@id/aez_btn_cancel"
            />

        <Button
            android:id="@+id/aez_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/cancel_eng"
            android:onClick="@{activity::onBtnClick}"
            android:background="@drawable/sel_btn_edit"
            app:layout_constraintStart_toEndOf="@id/aez_btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>